--- a/package.json
+++ b/package.json
@@ -59,11 +59,13 @@
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.51.5",
     "react-resizable-panels": "^3.0.2",
+    "react-toastify": "^11.0.5",
     "recharts": "^2.12.10",
     "sonner": "^1.6.1",
     "tailwind-merge": "^2.5.4",
     "tailwindcss": "^3.4.3",
     "tailwindcss-animate": "^1.0.1",
+    "toast": "^0.5.4",
     "typescript": "^5.4.5",
     "vaul": "^1.1.2",
     "zod": "^3.23.9",
