--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "remix build",
     "start": "next start",
     "lint": "next lint"
   },
@@ -61,6 +61,7 @@
     "react-resizable-panels": "^3.0.2",
     "react-toastify": "^11.0.5",
     "recharts": "^2.12.10",
+    "remix": "^2.16.8",
     "sonner": "^2.0.5",
     "tailwind-merge": "^2.5.4",
     "tailwindcss": "^3.4.3",
