--- a/package.json
+++ b/package.json
@@ -49,11 +49,13 @@
     "embla-carousel-react": "^8.3.4",
     "eslint": "^8.57.0",
     "eslint-config-next": "^15.1.8",
+    "googleapis": "^150.0.1",
     "input-otp": "^1.3.1",
     "lucide-react": "^0.456.0",
     "next": "^15.1.8",
     "next-themes": "^0.4.6",
     "postcss": "^8.4.38",
+    "razorpay": "^2.9.6",
     "react": "^19.1.0",
     "react-day-picker": "^9.7.0",
     "react-dom": "^19.1.0",
